# Swasthi_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: abc2a2777970_add_new_fields_to_employee_model.py  b7876ea09094_initial_migration.py  b805aa3a8778_added_employee_table.py  bc6358d44c38_removed_the_post_table.py  fba4d3f8f3f6_added_paytm_table.py
scripts/: dev.py
src/: app.py  server.py
src/config/: connection.py  settings.py
src/controllers/: employeeController.py  userController.py
src/models/: employee.py  test.py  user.py
src/routes/: userRoutes.py
src/schemas/: employee.py
src/utils/: response.py
